--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals", "prettier"]
+  "extends": ["./node_modules/standard/eslintrc.json", "next/core-web-vitals"]
 }
